<resources>
    <string name="app_name">LaundryNotification</string>
    <string name="intro_text">Welcome to the Laundry Notification App!  The current status is listed below.  See the app settings to configure notifications upon status change.</string>
    <string name="status_value_off">Machine Off</string>
    <string name="status_value_running">Machine Running</string>
    <string name="status_value_finished">Machine Finished - Ready to Unload!</string>
    <string name="status_unknown">Unknown - Accelerometer disconnected</string>

    <string name="static_status">Status:</string>
    <string name="static_settings">Settings</string>
    <string name="static_notifications">Notifications</string>
    <string name="static_notifications_summary">Turn notifications on or off</string>
    <string name="static_off">Turn off Accelerometer</string>
    <string name="static_offButtonText">WARNING: turn off the accelerometer using this button prior to closing the app.  If you do not, the MetaWear board may not connect correctly the next time you run the app.</string>
    <string name="configureAPI">Configure Notifications</string>

    <string name="static_apiKeys">API Keys</string>
    <string name="static_apiKey1">API Key 1</string>
    <string name="static_apiKey2">API Key 2</string>
    <string name="static_apiKey3">API Key 3</string>
    <string name="static_macAddr">MAC Address</string>
    <string name="static_sensorConfig">Sensor Configuration</string>

    <string name="alert_macAddr_title">Set MAC Address</string>
    <string name="alert_macAddr_msg">This app requires entering a valid MAC address for a MetaWear sensor.  Please click below to update the MAC address.</string>
    <string name="alert_macAddr_posButton">Go to Settings</string>
    <string name="alert_macAddr_negButton">Exit App</string>

    <string name="static_apiKeyIntro">Enter an API key below.  Click the button to save it securely to the Amazon Keystore.</string>
    <string name="static_save">Save</string>
    <string name="static_descViewHint">Enter a description of the key below.</string>
    <string name="static_apiViewHint">Enter an If This Then That (IFTTT) API key here to configure notifications.</string>
    <string name="apiDesc">Description</string>
    <string name="apiKey">Key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
